<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Admin Enable Rating App</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnAdd">Add new app</string>
    <string name="btnApps">Show list of apps</string>
    <string name="txbName">Name of game to rate</string>
    <string name="firstLaunch">Game Rating first launch</string>
    <string name="txbUserName">Your username</string>
    <string name="btnProceed">Proceed</string>
    <string name="error">Error</string>
    <string name="commentHint">Comment on your rating</string>
    <string name="listFilter">Search apps…</string>
    <string name="test">Test</string>
    <string name="textRatingSubmit">Rate this game:</string>
    <string name="logOut">Log Out</string>
    <string name="splashTitle">Enable\nRating\nApplication</string>
    <string name="splashDescription">An app for rating violence in kids\' games and apps.\nRate 5 starts for nice apps, 0 stars for apps with abuse.</string>

</resources>